# canas

./: .gitignore  meson.build
include/canas/: canas.h  canas_timpl.h  circularbuffer.h  circularbuffer_timpl.h  core.h  core_timpl.h  crc16ibm.h  crc16ibm_timpl.h  declare.h  errors.h  id.h  packets.h  serdes.h  serdes_timpl.h  slip.h  slip_timpl.h  utils.h
include/canas/serdes/: cansocket.h  cansocket_timpl.h  serdes.h  serdes_timpl.h  serial.h  serial_timpl.h
src/: canas.cpp  cansocket.cpp  core.cpp  crc16ibm.cpp  errors.cpp  serdes.cpp  slip.cpp  utils.cpp
tests/: canas_test.cpp  circularbuffer_test.cpp  core_test.cpp  crc16ibm_test.cpp  meson.build  serdes_cansocket_test.cpp  serdes_serial_test.cpp  slip_test.cpp  utils_test.cpp
